# cmdop-claude

./: .gitignore  CLAUDE.md  Makefile  QUICKSTART.md  README.md  pyproject.toml  pyrightconfig.json
.claude/: .permissions.json  CLAUDE.md  project-map.md
.claude/changelog/: v0.1.51.md  v0.1.53.md  v0.1.54.md  v0.1.55.md  v0.1.58.md  v0.1.59.md  v0.1.63.md  v0.1.65.md  v0.1.68.md  v0.1.69.md  v0.1.71.md  v0.1.72.md  v0.1.73.md
.claude/hooks/: post_tool.json
.claude/hooks/scripts/: clean-json.sh
.claude/rules/: context-hygiene.md  sidecar.md  testing.md
.claude/skills/code_reviewer/: SKILL.md
.claude/skills/python_architect/: SKILL.md
.streamlit/: config.toml
changelog/: v0.1.48.md  v0.1.50.md  v0.1.52.md  v0.1.56.md  v0.1.57.md  v0.1.60.md  v0.1.61.md  v0.1.62.md  v0.1.64.md  v0.1.66.md  v0.1.67.md
docs/: architecture.md  cli.md  configuration.md  cost.md  mcp-tools.md
examples/demo-project/: run_demo.py  setup_demo.py
examples/demo-project/demo-todo-app/: .gitignore  CLAUDE.md  Makefile  pyproject.toml
examples/demo-project/demo-todo-app/.claude/: project-map.md
examples/demo-project/demo-todo-app/.claude/.sidecar/: map_cache.json  review.md  usage.json
examples/demo-project/demo-todo-app/.claude/.sidecar/tasks/: T-001.md  T-002.md  T-003.md  T-004.md  T-005.md
examples/demo-project/demo-todo-app/.claude/rules/: api-design.md  security.md  testing.md
examples/demo-project/demo-todo-app/src/todo_app/: config.py  main.py
examples/demo-project/demo-todo-app/src/todo_app/api/: auth.py  routes.py
examples/demo-project/demo-todo-app/src/todo_app/db/: connection.py
examples/demo-project/demo-todo-app/src/todo_app/models/: todo.py  user.py
examples/demo-project/demo-todo-app/src/todo_app/services/: todo_service.py
examples/demo-project/demo-todo-app/tests/: conftest.py  test_todo_service.py
scripts/: embed_docs.py  reindex_docs.py
src/cmdop_claude/: __init__.py  _client.py  _config.py  _constants.py
tests/e2e/: test_full_flow.py  test_real_llm.py
tests/infrastructure/: test_json_storage.py  test_llm_caller.py
tests/models/: test_cmdop_config.py  test_plugin.py  test_project_map.py  test_sidecar.py  test_task.py
tests/services/: test_docs_service.py  test_embed_service.py  test_package_collector.py  test_package_indexer.py  test_plugin_service.py  test_sidecar.py  test_skill_service.py  test_update_service.py  test_vector_indexer.py
tests/sidecar/: test_activity.py  test_cache.py  test_exclusions.py  test_git_context.py  test_hook.py  test_mapper.py  test_scanner.py  test_server.py  test_sidecar_section.py  test_tasks.py  test_toon.py
(+182 files in other folders)
